--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "mockman-js": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.49.9",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
@@ -20,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js src/**/**/*.jsx"
   },
   "browserslist": {
     "production": [
@@ -37,6 +39,7 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.5.1"
